# green4ai

./: .replit  pyproject.toml  start_app.py
backend/: Train_yolo.ipynb  requirements.txt  yolo_fastapi_server.py
frontend/: index.html  instructions.html  proxy.py  teach.html  upload.html
